Adjusting name for gem

--- a/README
+++ b/README
@@ -3,5 +3,5 @@ A set of utility classes to extract meta data from different file types
 INSTALL
 -------
 
-gem install file_utils
+gem install fileutils
 
