Added htmltopdf wrapper

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ A set of utility classes to extract meta data from different file types
 INSTALL
 -------
 
-gem install fileutils
+gem install CommandWrap
 
 REQUIREMENTS
 ------------
